# gym-http-api

./: README.md  example_agent.py  gym_http_client.py  gym_http_server.py  requirements.txt
binding-OCaml/: .gitignore  dune  dune-project  gym_client.opam
binding-OCaml/_build/: .db  .digest-db  log
binding-OCaml/_build/default/: gym_client.dune-package  gym_client.install
binding-OCaml/_build/default/.dune/: configurator  configurator.v2
binding-OCaml/_build/default/lib/: gym_client.cma  gym_client.cmxa  gym_client.cmxs  gym_client.ml  gym_client__.ml-gen
binding-OCaml/_build/default/lib/.gym_client.objs/: gym_client.impl.all-deps  gym_client.impl.d  gym_client__Rest.impl.d
binding-OCaml/_build/default/lib/.gym_client.objs/byte/: gym_client.cmi  gym_client.cmo  gym_client.cmt  gym_client__.cmi  gym_client__.cmo  gym_client__.cmt  gym_client__Rest.cmi  gym_client__Rest.cmo  gym_client__Rest.cmt
binding-OCaml/_build/default/lib/.gym_client.objs/native/: gym_client.cmx  gym_client__.cmx  gym_client__Rest.cmx
binding-OCaml/_build/default/lib/.merlin-conf/: lib-gym_client
binding-OCaml/_build/default/test/: gym_client_test.ml
binding-OCaml/_build/default/test/.gym_client_test.eobjs/byte/: dune__exe__Gym_client_test.cmi  dune__exe__Gym_client_test.cmti
binding-OCaml/_build/default/test/.gym_client_test.eobjs/native/: dune__exe__Gym_client_test.cmx
binding-OCaml/_build/default/test/.merlin-conf/: exe-gym_client_test
binding-OCaml/lib/: dune  gym_client.ml  rest.ml
binding-OCaml/test/: dune  gym_client_test.ml
tests/: test_api.py
(+5 files in other folders)
