(lang dune 3.9)

(name gym_client)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name gym_client)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
  (ocaml (>= 5.1.1)) 
  (dune (>= 3.13.0))
  (ounit2 (>= 2.2.7))
  (yojson (>= 2.1.2))
  (eio (>= 0.14)) 
  (eio_main (>= 0.14)) 
  (cohttp-eio (>= 6.0.0~beta2)))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
